<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/textColor_whit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:background="@color/color_line"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"/>
    <Button
        android:id="@+id/share_person"
        android:layout_marginTop="10dp"
        android:background="@drawable/btnstyle"
        android:textColor="@color/textColor_whit"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/share_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/share_session"
        android:layout_marginTop="10dp"
        android:background="@drawable/btnstyle"
        android:textColor="@color/textColor_whit"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/share_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/share_cancel"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btnstyle"
        android:textColor="@color/textColor_whit"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>