<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:text="@string/school_lesson_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:text="@string/school_lesson_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:text="@string/school_lesson_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:text="@string/school_lesson_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"/>
    <com.holenzhou.pullrecyclerview.PullRecyclerView
        android:id="@+id/school_lesson_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--item为：item_school_lesson_recycler-->
    </com.holenzhou.pullrecyclerview.PullRecyclerView>
</LinearLayout>