<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/techer_news_title1"
                android:layout_centerInParent="true"
                android:text="@string/news_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <View
            android:layout_gravity="center"
            android:background="@color/light_gray"
            android:layout_width="1dp"
            android:layout_height="30dp"/>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/techer_news_title2"
                android:layout_centerInParent="true"
                android:text="@string/news_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:layout_gravity="center"
            android:background="@color/light_gray"
            android:layout_width="1dp"
            android:layout_height="30dp"/>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/techer_news_title3"
                android:layout_centerInParent="true"
                android:text="@string/news_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:layout_gravity="center"
            android:background="@color/light_gray"
            android:layout_width="1dp"
            android:layout_height="30dp"/>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/techer_news_title4"
                android:layout_centerInParent="true"
                android:text="@string/news_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp">
        <ImageView
            android:id="@+id/teacher_news_linespace"
            android:layout_marginLeft="15dp"
            android:background="@color/colorPrimary"
            android:layout_width="80dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <View
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/teacher_news_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>